--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^2.26.1",
+    "gatsby-plugin-postcss": "^3.2.0",
+    "postcss": "^8.1.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
