--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bulma": "^0.9.1",
     "gatsby": "^2.26.1",
     "gatsby-plugin-postcss": "^3.2.0",
+    "gatsby-plugin-sass": "^2.6.0",
+    "node-sass": "^4.14.1",
     "postcss": "^8.1.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
