--- a/package.json
+++ b/package.json
@@ -14,11 +14,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
+    "bulma": "^0.9.1",
+    "firebase": "^8.1.1",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-postcss": "^3.2.0",
+    "gatsby-plugin-sass": "^2.6.0",
+    "node-sass": "^4.14.1",
     "postcss": "^8.1.9",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-firebase-hooks": "^2.2.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
