--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -28,7 +28,8 @@
     "postcss": "^8.1.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-firebase-hooks": "^2.2.0"
+    "react-firebase-hooks": "^2.2.0",
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "prettier": "2.1.2"
